--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ window.onload = function() {
                 phone: '',
                 c_unit: '',
                 auto_submit: false,                 
-                remember_me: true
+                remember_me: false
             },            
             styles: {
                 zIndex: 100                       
